--- a/morsebrowser/index.html
+++ b/morsebrowser/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KN4YRM Morse Practice Page</title>
-<script defer src="bundle798a2387606b0b35298e.js"></script></head>
+<script defer src="bundledee6056d15f04ac5ce3f.js"></script></head>
 <body>
     
         <div class="container-fluid" style="height: 30vh;">
@@ -23,8 +23,10 @@
                         <input type="number" class="form-control" aria-label="Username" min="0" data-bind="textInput: wpm">
                         <span class="input-group-text">FWPM</span>
                         <input type="number" class="form-control" aria-label="Server" min="0" data-bind="textInput: fwpm">
-                        <span class="input-group-text">FREQ</span>
-                        <input type="number" class="form-control" aria-label="Server" min="100" max="1200" step="50" data-bind="textInput: frequency">
+                        <span class="input-group-text">DITFREQ</span>
+                        <input type="number" class="form-control" aria-label="Server" min="100" max="1200" step="50" data-bind="textInput: ditFrequency">
+                        <span class="input-group-text">DAHFREQ</span>
+                        <input type="number" class="form-control" aria-label="Server" min="100" max="1200" step="50" data-bind="textInput: dahFrequency">
                     </div>
                 </div>
             </div>
