word spacing by dit length

--- a/morsebrowser/index.html
+++ b/morsebrowser/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KN4YRM Morse Practice Page</title>
-<script defer src="bundle5a3e30582ec8b278e955.js"></script></head>
+<script defer src="bundle64e329c131392369429f.js"></script></head>
 <body>
     
         <div class="container-fluid" style="height: 30vh;">
@@ -29,6 +29,8 @@
                         <input type="number" class="form-control" aria-label="Server" min="100" max="1200" step="50" data-bind="textInput: dahFrequency">
                         <span class="input-group-text">PRESPACE</span>
                         <input type="number" class="form-control" aria-label="Server" min="0" max="1200" step=".5" data-bind="textInput: preSpace">
+                        <span class="input-group-text">XTRAWRDSPDITS</span>
+                        <input type="number" class="form-control" aria-label="Server" min="0" max="1200" step="1" data-bind="textInput: xtraWordSpaceDits">
                     </div>
                 </div>
             </div>
