--- a/morsebrowser/index.html
+++ b/morsebrowser/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KN4YRM Morse Practice Page</title>
-<script defer src="bundled0b227e2ad029bf49147.js"></script></head>
+<script defer src="bundle7dd0ffa697bba962f28a.js"></script></head>
 <body>
     <div class="container-fluid" style="height:100vh; overflow-y:clip; ">
         <div class="row">
@@ -125,7 +125,7 @@
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                   <div class="accordion-body">
                                     <div class="input-group">
-                                        <span class="input-group-text" data-bind="setFlagged">Click to Set</span>
+                                        <span class="input-group-text" data-bind="click:setFlagged">Click to Set</span>
                                         <textarea data-bind="textInput: flaggedWords" class="form-control" aria-label="Text"></textarea>
                                         
                                     </div>
