--- a/morsebrowser/index.html
+++ b/morsebrowser/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KN4YRM Morse Practice Page</title>
-<script defer src="bundlea56ab02c06aa5ff37ee0.js"></script></head>
+<script defer src="bundleb35749d082daf5e49607.js"></script></head>
 <body>
     <div class="container-fluid" style="height:100vh; overflow-y:clip; ">
         <div class="row">
@@ -122,6 +122,8 @@
                                     -->
                                     <input type="checkbox" data-bind="checked: hideList" class="btn-check" id="btnHideList" autocomplete="off"/>
                                     <label class="btn btn-outline-primary" for="btnHideList" data-bind="text: hideList()?'Unhide List Words':'Hide List Words'"></label>
+                                    <input type="checkbox" data-bind="checked: trailReveal" class="btn-check" id="btntrailReveal" autocomplete="off"/>
+                                    <label class="btn btn-outline-secondary" for="btntrailReveal" >Trail Reveal</label>
                                 </div>
                                 <div class="input-group" aria-label="thirdgroup">
                                     <span class="input-group-text">SENTENCE</span>
@@ -150,7 +152,7 @@
                 <div class="container-fluid">
                     <div class="row overflow-auto" style="height: 100vh;">
                         <div class="col" data-bind="foreach: words">
-                            <button class="btn" data-bind="class: $index()==$parent.currentIndex() ? 'btn-primary':'btn-outline-primary',text: !$parent.hideList() ? $data : 'X'.repeat($data.length),click:()=>$parent.addFlaggedWord($data)"></button>
+                            <button class="btn" data-bind="class: $index()==$parent.currentIndex() ? 'btn-primary':'btn-outline-primary',text: (!$parent.hideList() || ($parent.trailReveal() && $index() < $parent.currentIndex() )) ? $data : 'X'.repeat($data.length),click:()=>$parent.addFlaggedWord($data)"></button>
                         </div>
                     </div>
                 </div>
