--- a/morsebrowser/index.html
+++ b/morsebrowser/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KN4YRM Morse Practice Page</title>
-<script defer src="bundleb35749d082daf5e49607.js"></script></head>
+<script defer src="bundle5685b861853e1688ade1.js"></script></head>
 <body>
     <div class="container-fluid" style="height:100vh; overflow-y:clip; ">
         <div class="row">
@@ -123,7 +123,7 @@
                                     <input type="checkbox" data-bind="checked: hideList" class="btn-check" id="btnHideList" autocomplete="off"/>
                                     <label class="btn btn-outline-primary" for="btnHideList" data-bind="text: hideList()?'Unhide List Words':'Hide List Words'"></label>
                                     <input type="checkbox" data-bind="checked: trailReveal" class="btn-check" id="btntrailReveal" autocomplete="off"/>
-                                    <label class="btn btn-outline-secondary" for="btntrailReveal" >Trail Reveal</label>
+                                    <label class="btn btn-outline-secondary" for="btntrailReveal" data-bind="text: trailReveal()?'Hide Trail':'Reveal Trail'"></label>
                                 </div>
                                 <div class="input-group" aria-label="thirdgroup">
                                     <span class="input-group-text">SENTENCE</span>
