--- a/morsebrowser/index.html
+++ b/morsebrowser/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KN4YRM Morse Practice Page</title>
-<script defer src="bundle5685b861853e1688ade1.js"></script></head>
+<script defer src="bundlef7eb42ad8d6c476b3d65.js"></script></head>
 <body>
     <div class="container-fluid" style="height:100vh; overflow-y:clip; ">
         <div class="row">
@@ -49,6 +49,33 @@
                     <!--  accordian area -->
                     <div class="row">
                         <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingThree">
+                                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Word Lists (Experimental)
+                                  </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                  <div class="accordion-body">
+                                    
+                                    <div class="list-group">
+                                        <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
+                                        The current button
+                                        </button>
+                                        <button type="button" class="list-group-item list-group-item-action">A second item</button>
+                                        <button type="button" class="list-group-item list-group-item-action">A third button item</button>
+                                        <button type="button" class="list-group-item list-group-item-action">A fourth button item</button>
+                                        <button type="button" class="list-group-item list-group-item-action" disabled>A disabled button item</button>
+                                    </div>
+
+                                    <div class="list-group" data-bind="foreach: wordLists">
+                                        <button type="button" class="list-group-item list-group-item-action" data-bind="text: $data.display"></button>
+                                    </div>
+
+                                  </div>
+                                </div>
+                            </div>
+
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
@@ -99,7 +126,7 @@
                                     </div>
                                   </div>
                                 </div>
-                              </div>
+                            </div>
                             
                         </div>
                     </div> 
