--- a/morsebrowser/index.html
+++ b/morsebrowser/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KN4YRM Morse Practice Page</title>
-<script defer src="bundlef7eb42ad8d6c476b3d65.js"></script></head>
+<script defer src="bundle4a237d63c1d8973e13cd.js"></script></head>
 <body>
     <div class="container-fluid" style="height:100vh; overflow-y:clip; ">
         <div class="row">
@@ -58,18 +58,9 @@
                                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                   <div class="accordion-body">
                                     
-                                    <div class="list-group">
-                                        <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
-                                        The current button
-                                        </button>
-                                        <button type="button" class="list-group-item list-group-item-action">A second item</button>
-                                        <button type="button" class="list-group-item list-group-item-action">A third button item</button>
-                                        <button type="button" class="list-group-item list-group-item-action">A fourth button item</button>
-                                        <button type="button" class="list-group-item list-group-item-action" disabled>A disabled button item</button>
-                                    </div>
-
-                                    <div class="list-group" data-bind="foreach: wordLists">
-                                        <button type="button" class="list-group-item list-group-item-action" data-bind="text: $data.display"></button>
+                                    
+                                    <div class="list-group" data-bind="foreach: wordLists" style="overflow-y:auto; height:250px;">
+                                        <button type="button" class="list-group-item list-group-item-action" data-bind="text: $data.display, click: ()=>$parent.getWordList($data.fileName)"></button>
                                     </div>
 
                                   </div>
